:wrench: update beautysh hook dependencies
Added setuptools==80 as an additional dependency for the beautysh hook to resolve installation issues.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,6 +70,8 @@ repos:
     rev: v6.2.1
     hooks:
       - id: beautysh
+        additional_dependencies:
+          - setuptools==80  # workaround for beautysh
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
     hooks:
